// A2A Protocol v1 — stripped for tonic-build (no googleapis annotations)
syntax = "proto3";
package a2a.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service A2aService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc SendStreamingMessage(SendMessageRequest) returns (stream StreamResponse);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc CancelTask(CancelTaskRequest) returns (Task);
  rpc TaskSubscription(TaskSubscriptionRequest) returns (stream StreamResponse);
  rpc CreateTaskPushNotificationConfig(CreateTaskPushNotificationConfigRequest) returns (TaskPushNotificationConfig);
  rpc GetTaskPushNotificationConfig(GetTaskPushNotificationConfigRequest) returns (TaskPushNotificationConfig);
  rpc ListTaskPushNotificationConfig(ListTaskPushNotificationConfigRequest) returns (ListTaskPushNotificationConfigResponse);
  rpc GetAgentCard(GetAgentCardRequest) returns (AgentCard);
  rpc DeleteTaskPushNotificationConfig(DeleteTaskPushNotificationConfigRequest) returns (google.protobuf.Empty);
}

// ─── Voice Service ───────────────────────────────────────────────────────

service VoiceService {
  // Create a new voice session (LiveKit room + agent dispatch)
  rpc CreateVoiceSession(CreateVoiceSessionRequest) returns (VoiceSession);
  // Get current state of a voice session
  rpc GetVoiceSession(GetVoiceSessionRequest) returns (VoiceSession);
  // End a voice session
  rpc DeleteVoiceSession(DeleteVoiceSessionRequest) returns (google.protobuf.Empty);
  // List available voice profiles
  rpc ListVoices(ListVoicesRequest) returns (ListVoicesResponse);
  // Stream voice events (transcripts, state changes) for a session
  rpc StreamVoiceEvents(StreamVoiceEventsRequest) returns (stream VoiceEvent);
}

// ─── Data Model ──────────────────────────────────────────────────────────

message SendMessageConfiguration {
  repeated string accepted_output_modes = 1;
  PushNotificationConfig push_notification = 2;
  int32 history_length = 3;
  bool blocking = 4;
}

message Task {
  string id = 1;
  string context_id = 2;
  TaskStatus status = 3;
  repeated Artifact artifacts = 4;
  repeated Message history = 5;
  google.protobuf.Struct metadata = 6;
}

enum TaskState {
  TASK_STATE_UNSPECIFIED = 0;
  TASK_STATE_SUBMITTED = 1;
  TASK_STATE_WORKING = 2;
  TASK_STATE_COMPLETED = 3;
  TASK_STATE_FAILED = 4;
  TASK_STATE_CANCELLED = 5;
  TASK_STATE_INPUT_REQUIRED = 6;
  TASK_STATE_REJECTED = 7;
  TASK_STATE_AUTH_REQUIRED = 8;
}

message TaskStatus {
  TaskState state = 1;
  Message update = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message Part {
  oneof part {
    string text = 1;
    FilePart file = 2;
    DataPart data = 3;
  }
  google.protobuf.Struct metadata = 4;
}

message FilePart {
  oneof file {
    string file_with_uri = 1;
    bytes file_with_bytes = 2;
  }
  string mime_type = 3;
  string name = 4;
}

message DataPart {
  google.protobuf.Struct data = 1;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_AGENT = 2;
}

message Message {
  string message_id = 1;
  string context_id = 2;
  string task_id = 3;
  Role role = 4;
  repeated Part content = 5;
  google.protobuf.Struct metadata = 6;
  repeated string extensions = 7;
}

message Artifact {
  string artifact_id = 1;
  string name = 3;
  string description = 4;
  repeated Part parts = 5;
  google.protobuf.Struct metadata = 6;
  repeated string extensions = 7;
}

message TaskStatusUpdateEvent {
  string task_id = 1;
  string context_id = 2;
  TaskStatus status = 3;
  bool final = 4;
  google.protobuf.Struct metadata = 5;
}

message TaskArtifactUpdateEvent {
  string task_id = 1;
  string context_id = 2;
  Artifact artifact = 3;
  bool append = 4;
  bool last_chunk = 5;
  google.protobuf.Struct metadata = 6;
}

message PushNotificationConfig {
  string id = 1;
  string url = 2;
  string token = 3;
  AuthenticationInfo authentication = 4;
}

message AuthenticationInfo {
  repeated string schemes = 1;
  string credentials = 2;
}

message AgentInterface {
  string url = 1;
  string transport = 2;
}

message AgentCard {
  string protocol_version = 16;
  string name = 1;
  string description = 2;
  string url = 3;
  string preferred_transport = 14;
  repeated AgentInterface additional_interfaces = 15;
  AgentProvider provider = 4;
  string version = 5;
  string documentation_url = 6;
  AgentCapabilities capabilities = 7;
  map<string, SecurityScheme> security_schemes = 8;
  repeated Security security = 9;
  repeated string default_input_modes = 10;
  repeated string default_output_modes = 11;
  repeated AgentSkill skills = 12;
  bool supports_authenticated_extended_card = 13;
  repeated AgentCardSignature signatures = 17;
  string icon_url = 18;
}

message AgentProvider {
  string url = 1;
  string organization = 2;
}

message AgentCapabilities {
  bool streaming = 1;
  bool push_notifications = 2;
  repeated AgentExtension extensions = 3;
}

message AgentExtension {
  string uri = 1;
  string description = 2;
  bool required = 3;
  google.protobuf.Struct params = 4;
}

message AgentSkill {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string tags = 4;
  repeated string examples = 5;
  repeated string input_modes = 6;
  repeated string output_modes = 7;
  repeated Security security = 8;
}

message AgentCardSignature {
  string protected = 1;
  string signature = 2;
  google.protobuf.Struct header = 3;
}

message TaskPushNotificationConfig {
  string name = 1;
  PushNotificationConfig push_notification_config = 2;
}

message StringList {
  repeated string list = 1;
}

message Security {
  map<string, StringList> schemes = 1;
}

message SecurityScheme {
  oneof scheme {
    APIKeySecurityScheme api_key_security_scheme = 1;
    HTTPAuthSecurityScheme http_auth_security_scheme = 2;
    OAuth2SecurityScheme oauth2_security_scheme = 3;
    OpenIdConnectSecurityScheme open_id_connect_security_scheme = 4;
    MutualTlsSecurityScheme mtls_security_scheme = 5;
  }
}

message APIKeySecurityScheme {
  string description = 1;
  string location = 2;
  string name = 3;
}

message HTTPAuthSecurityScheme {
  string description = 1;
  string scheme = 2;
  string bearer_format = 3;
}

message OAuth2SecurityScheme {
  string description = 1;
  OAuthFlows flows = 2;
  string oauth2_metadata_url = 3;
}

message OpenIdConnectSecurityScheme {
  string description = 1;
  string open_id_connect_url = 2;
}

message MutualTlsSecurityScheme {
  string description = 1;
}

message OAuthFlows {
  oneof flow {
    AuthorizationCodeOAuthFlow authorization_code = 1;
    ClientCredentialsOAuthFlow client_credentials = 2;
    ImplicitOAuthFlow implicit = 3;
    PasswordOAuthFlow password = 4;
  }
}

message AuthorizationCodeOAuthFlow {
  string authorization_url = 1;
  string token_url = 2;
  string refresh_url = 3;
  map<string, string> scopes = 4;
}

message ClientCredentialsOAuthFlow {
  string token_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

message ImplicitOAuthFlow {
  string authorization_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

message PasswordOAuthFlow {
  string token_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

// ─── Request Messages ────────────────────────────────────────────────────

message SendMessageRequest {
  Message request = 1;
  SendMessageConfiguration configuration = 2;
  google.protobuf.Struct metadata = 3;
}

message GetTaskRequest {
  string name = 1;
  int32 history_length = 2;
}

message CancelTaskRequest {
  string name = 1;
}

message GetTaskPushNotificationConfigRequest {
  string name = 1;
}

message DeleteTaskPushNotificationConfigRequest {
  string name = 1;
}

message CreateTaskPushNotificationConfigRequest {
  string parent = 1;
  string config_id = 2;
  TaskPushNotificationConfig config = 3;
}

message TaskSubscriptionRequest {
  string name = 1;
}

message ListTaskPushNotificationConfigRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message GetAgentCardRequest {}

// ─── Response Messages ───────────────────────────────────────────────────

message SendMessageResponse {
  oneof payload {
    Task task = 1;
    Message msg = 2;
  }
}

message StreamResponse {
  oneof payload {
    Task task = 1;
    Message msg = 2;
    TaskStatusUpdateEvent status_update = 3;
    TaskArtifactUpdateEvent artifact_update = 4;
  }
}

message ListTaskPushNotificationConfigResponse {
  repeated TaskPushNotificationConfig configs = 1;
  string next_page_token = 2;
}

// ─── Voice Messages ──────────────────────────────────────────────────────

enum VoiceSessionState {
  VOICE_SESSION_STATE_UNSPECIFIED = 0;
  VOICE_SESSION_STATE_CREATING = 1;
  VOICE_SESSION_STATE_ACTIVE = 2;
  VOICE_SESSION_STATE_ENDED = 3;
  VOICE_SESSION_STATE_ERROR = 4;
}

enum VoiceAgentState {
  VOICE_AGENT_STATE_UNSPECIFIED = 0;
  VOICE_AGENT_STATE_INITIALIZING = 1;
  VOICE_AGENT_STATE_LISTENING = 2;
  VOICE_AGENT_STATE_THINKING = 3;
  VOICE_AGENT_STATE_SPEAKING = 4;
}

message VoiceProfile {
  string voice_id = 1;
  string name = 2;
  string language = 3;
  double sample_duration_seconds = 4;
  string created_at = 5;
}

message VoiceSession {
  string room_name = 1;
  string voice_id = 2;
  VoiceSessionState state = 3;
  VoiceAgentState agent_state = 4;
  string access_token = 5;
  string livekit_url = 6;
  google.protobuf.Timestamp created_at = 7;
}

message VoiceTranscriptEvent {
  string room_name = 1;
  string text = 2;
  Role role = 3;
  bool is_final = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message VoiceEvent {
  oneof event {
    VoiceTranscriptEvent transcript = 1;
    VoiceAgentStateEvent agent_state_change = 2;
    VoiceSessionEndedEvent session_ended = 3;
  }
}

message VoiceAgentStateEvent {
  string room_name = 1;
  VoiceAgentState state = 2;
}

message VoiceSessionEndedEvent {
  string room_name = 1;
  string reason = 2;
}

// ─── Voice Requests ──────────────────────────────────────────────────────

message CreateVoiceSessionRequest {
  string voice_id = 1;
  string context_id = 2;
}

message GetVoiceSessionRequest {
  string room_name = 1;
}

message DeleteVoiceSessionRequest {
  string room_name = 1;
}

message ListVoicesRequest {}

message ListVoicesResponse {
  repeated VoiceProfile voices = 1;
}

message StreamVoiceEventsRequest {
  string room_name = 1;
}
